--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -63,10 +63,10 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          build-args:
-            - CREATED=${{ steps.date.outputs.date }}
-            - REVISION=${{github.sha}}
-            - VERSION=latest
+          build-args: |
+            CREATED=${{ steps.date.outputs.date }}
+            REVISION=${{github.sha}}
+            VERSION=latest
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ github.repository }}:latest
