--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -33,6 +33,8 @@ jobs:
             CREATED=${{ steps.date.outputs.date }}
             REVISION=${{github.sha}}
             VERSION=latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           load: true
           push: false
           tags: docker-ansible:latest
@@ -74,6 +76,8 @@ jobs:
             CREATED=${{ steps.date.outputs.date }}
             REVISION=${{github.sha}}
             VERSION=latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ github.repository }}:latest
